--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,23 +1,24 @@
 version: "3"
 services:
-  torders-app:
+  torders-web:
     build: ./app
-    image: torders-app
+    image: torders
     ports:
       - 2014:2014
-    command: --reload
+    command: ["web", "--reload"]
     volumes:
       - ./uploads:/uploads
       - ./results:/results
       - ./app:/app
     depends_on:
-      - mongo
-  mongo:
-    image: mongo:4
-    environment:
-      - MONGO_DATA_DB=/data
-      - MONGO_INITDB_DATABASE=torders
+      - redis
+  torders-worker:
+    build: ./app
+    image: torders
+    command: ["worker", "--reload"]
+  redis:
+    image: redis:3-alpine
     ports:
-      - 27017:27017
+      - 6379:6379
     volumes:
       - ./data:/data
