--- a/celery-queue/Dockerfile
+++ b/celery-queue/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.6-alpine
+FROM python:2
 
 ENV CELERY_BROKER_URL redis://redis:6379/0
 ENV CELERY_RESULT_BACKEND redis://redis:6379/0
@@ -6,6 +6,10 @@ ENV C_FORCE_ROOT true
 
 COPY . /queue
 WORKDIR /queue
+
+RUN apt-get update &&  apt-get upgrade -y && apt-get install -y \
+  graphviz \
+  xdg-utils
 
 RUN pip install -r requirements.txt
 
