--- a/client/package.json
+++ b/client/package.json
@@ -17,15 +17,28 @@
     "react-scripts": "2.1.3"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.14",
+    "@fortawesome/free-solid-svg-icons": "^5.7.1",
+    "@fortawesome/react-fontawesome": "^0.1.4",
+    "bootstrap": "^4.2.1",
     "connected-react-router": "4.5.0",
     "react": "16.7.0",
+    "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "16.7.0",
     "react-redux": "5.1.1",
     "react-router": "4.3.1",
+    "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "4.3.1",
+    "react-spinners": "^0.5.1",
     "redux": "4.0.1",
     "redux-thunk": "2.3.0",
     "sanitize.css": "7.0.3",
     "serve": "10.1.1"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
