--- a/client/package.json
+++ b/client/package.json
@@ -22,15 +22,20 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "bootstrap": "^4.2.1",
     "connected-react-router": "4.5.0",
+    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.23",
     "react": "16.7.0",
     "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "16.7.0",
+    "react-moment": "^0.8.4",
     "react-redux": "5.1.1",
     "react-router": "4.3.1",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "4.3.1",
     "react-spinners": "^0.5.1",
+    "react-toastify": "^4.5.2",
     "redux": "4.0.1",
+    "redux-persist": "^5.10.0",
     "redux-thunk": "2.3.0",
     "sanitize.css": "7.0.3",
     "serve": "10.1.1"
