--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "react-router": "4.3.1",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "4.3.1",
+    "react-router-hash-link": "^1.2.1",
     "react-spinners": "^0.5.1",
     "react-toastify": "^4.5.2",
     "redux": "4.0.1",
