--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,21 @@
 version: "3"
 services:
+  proxy:
+    image: nginx:latest
+    ports:
+      - 80:80
+      - 443:443
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
+    links:
+      - "torders-api:api"
+      - "torders-worker-monitor:monitor"
+      - "torders-client:client"
   torders-api:
     build:
       context: ./api
       dockerfile: Dockerfile
     restart: always
-    ports:
-     - "5001:5001"
     volumes:
      - ./results:/results
      - ./public:/public
@@ -25,8 +34,6 @@ services:
     build:
       context: celery-queue
       dockerfile: Dockerfile
-    ports:
-     - "5555:5555"
     entrypoint: flower
     command:  -A tasks --port=5555 --broker=redis://redis:6379/0
     depends_on:
@@ -36,7 +43,5 @@ services:
       context: ./client
       dockerfile: Dockerfile
     restart: always
-    ports:
-     - "80:80"
   redis:
     image: redis
