--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,10 @@
     "precommit": "pretty-quick --staged"
   },
   "devDependencies": {
-    "prettier": "1.16.3",
     "eslint-plugin-prettier": "^3.0.0",
-    "react-scripts": "2.1.3"
+    "prettier": "1.16.3",
+    "react-scripts": "2.1.3",
+    "terser": "^3.14.1"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.14",
