--- a/client/package.json
+++ b/client/package.json
@@ -26,7 +26,7 @@
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.23",
     "react": "16.7.0",
-    "react-bootstrap": "^1.0.0-beta.5",
+    "react-bootstrap": "1.0.0-beta.5",
     "react-dom": "16.7.0",
     "react-moment": "^0.8.4",
     "react-redux": "5.1.1",
