--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,21 @@ services:
     image: jwilder/nginx-proxy
     ports:
       - "80:80"
+      - "443:443"
     volumes:
       - /var/run/docker.sock:/tmp/docker.sock:ro
       - /apps/docker-articles/nginx/vhost.d:/etc/nginx/vhost.d
+      - /apps/docker-articles/nginx/certs:/etc/nginx/certs:ro
+      - /apps/docker-articles/nginx/html:/usr/share/nginx/html
+    labels:
+      com.github.jrcs.letsencrypt_nginx_proxy_companion.nginx_proxy: "true"
+  letsencrypt:
+    image: jrcs/letsencrypt-nginx-proxy-companion:v1.5
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - /apps/docker-articles/nginx/vhost.d:/etc/nginx/vhost.d
+      - /apps/docker-articles/nginx/certs:/etc/nginx/certs:rw
+      - /apps/docker-articles/nginx/html:/usr/share/nginx/html
   torders-api:
     build:
       context: ./api
@@ -21,6 +33,8 @@ services:
     environment:
       VIRTUAL_HOST: torders-api.stanford.edu
       VIRTUAL_PORT: 5001
+      LETSENCRYPT_HOST: torders.stanford.edu
+      LETSENCRYPT_EMAIL: jsolis@graycoltdevelopers.com
   torders-worker:
     build:
       context: celery-queue
@@ -43,6 +57,8 @@ services:
     environment:
       VIRTUAL_HOST: torders-monitor.stanford.edu
       VIRTUAL_PORT: 5555
+      LETSENCRYPT_HOST: torders.stanford.edu
+      LETSENCRYPT_EMAIL: jsolis@graycoltdevelopers.com
   torders-client:
     build:
       context: ./client
@@ -51,6 +67,8 @@ services:
     environment:
       VIRTUAL_HOST: torders.stanford.edu
       VIRTUAL_PORT: 80
+      LETSENCRYPT_HOST: torders.stanford.edu
+      LETSENCRYPT_EMAIL: jsolis@graycoltdevelopers.com
     depends_on:
       - nginx-proxy
   redis:
