--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "react-bootstrap": "1.0.0-beta.5",
     "react-dom": "16.7.0",
     "react-moment": "^0.8.4",
+    "react-particles-js": "^2.5.1",
     "react-redux": "5.1.1",
     "react-router": "4.3.1",
     "react-router-bootstrap": "^0.24.4",
