--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,7 @@
 {
   "name": "t-orders",
   "private": true,
-  "homepage": "http://torders.stanford.edu/",
+  "homepage": "https://torders.stanford.edu/",
   "scripts": {
     "deploy": "now && now alias",
     "start": "react-scripts start",
