--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -4,6 +4,7 @@ RUN mkdir /usr/src/app
 WORKDIR /usr/src/app
 ENV PATH /usr/src/app/node_modules/.bin:$PATH
 COPY package.json /usr/src/app/package.json
+COPY package-lock.json /usr/src/app/package-lock.json
 RUN npm install
 RUN npm install react-scripts@1.1.1 -g
 COPY . /usr/src/app
