--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "start": "react-scripts start",
     "now-start": "serve -s ./build",
     "build": "react-scripts build",
+    "build:local": "env-cmd -f .env.local react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "precommit": "pretty-quick --staged"
@@ -23,6 +24,7 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "bootstrap": "^4.2.1",
     "connected-react-router": "4.5.0",
+    "env-cmd": "^10.1.0",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.23",
     "react": "16.7.0",
