--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -1,42 +1,61 @@
 version: "3"
 services:
+  nginx-proxy:
+    image: jwilder/nginx-proxy
+    restart: always
+    ports:
+      - "80:80"
+    volumes:
+      - /var/run/docker.sock:/tmp/docker.sock:ro
+      # - /apps/docker-articles/nginx/vhost.d:/etc/nginx/vhost.d
   torders-api:
     build:
       context: ./api
       dockerfile: Dockerfile
     restart: always
     volumes:
-     - ./results:/results
-     - ./public:/public
-    ports:
-     - "5001:5001"
+      - ./results:/results
+      - ./public:/public
     depends_on:
       - redis
+      - nginx-proxy
+    environment:
+      VIRTUAL_HOST: torders-api.local
+      VIRTUAL_PORT: 5001
   torders-worker:
     build:
       context: celery-queue
       dockerfile: Dockerfile
+    restart: always
     depends_on:
       - redis
+      - nginx-proxy
     volumes:
-     - ./results:/results
-     - ./public:/public
+      - ./results:/results
+      - ./public:/public
   torders-worker-monitor:
     build:
       context: celery-queue
       dockerfile: Dockerfile
+    restart: always
     entrypoint: flower
-    command:  -A tasks --port=5555 --broker=redis://redis:6379/0
-    ports:
-     - "5555:5555"
+    command: -A tasks --port=5555 --broker=redis://redis:6379/0
     depends_on:
       - redis
+      - nginx-proxy
+    environment:
+      VIRTUAL_HOST: torders-monitor.local
+      VIRTUAL_PORT: 5555
   torders-client:
     build:
       context: ./client
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.local
     restart: always
-    ports:
-     - "80:80"
+    environment:
+      VIRTUAL_HOST: torders.local
+      VIRTUAL_PORT: 80
+    depends_on:
+      - nginx-proxy
   redis:
     image: redis
+    restart: always
