--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     ports:
       - "80:80"
       - "443:443"
+    restart: always
     volumes:
       - /var/run/docker.sock:/tmp/docker.sock:ro
       - /apps/docker-articles/nginx/vhost.d:/etc/nginx/vhost.d
@@ -14,6 +15,7 @@ services:
       com.github.jrcs.letsencrypt_nginx_proxy_companion.nginx_proxy: "true"
   letsencrypt:
     image: jrcs/letsencrypt-nginx-proxy-companion
+    restart: always
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
       - /apps/docker-articles/nginx/vhost.d:/etc/nginx/vhost.d
@@ -27,8 +29,8 @@ services:
       dockerfile: Dockerfile
     restart: always
     volumes:
-     - ./results:/results
-     - ./public:/public
+      - ./results:/results
+      - ./public:/public
     depends_on:
       - redis
       - nginx-proxy
@@ -41,18 +43,20 @@ services:
     build:
       context: celery-queue
       dockerfile: Dockerfile
+    restart: always
     depends_on:
       - redis
       - nginx-proxy
     volumes:
-     - ./results:/results
-     - ./public:/public
+      - ./results:/results
+      - ./public:/public
   torders-worker-monitor:
     build:
       context: celery-queue
       dockerfile: Dockerfile
+    restart: always
     entrypoint: flower
-    command:  -A tasks --port=5555 --broker=redis://redis:6379/0
+    command: -A tasks --port=5555 --broker=redis://redis:6379/0
     depends_on:
       - redis
       - nginx-proxy
@@ -75,3 +79,4 @@ services:
       - nginx-proxy
   redis:
     image: redis
+    restart: always
